--- a/index.html
+++ b/index.html
@@ -5,45 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Are You Ready?</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: lavender;
-      font-family: 'Press Start 2P', cursive;
       text-align: center;
+      padding: 50px;
       color: #3a0066;
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 0 20px;
-      animation: fadeIn 2s ease-in;
     }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
     h1 {
+      font-family: 'Press Start 2P', cursive;
       font-size: 3rem;
       margin-bottom: 40px;
     }
-
     p {
-      font-family: Arial, sans-serif;
+      font-family: 'Nunito', sans-serif;
       font-size: 1rem;
       color: #4a2c6d;
       max-width: 700px;
       margin: 0 auto 50px auto;
       line-height: 1.6;
     }
-
     .start-button {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
+      display: inline-block;
       padding: 20px 40px;
       font-size: 1.5rem;
       background-color: #3a0066;
@@ -53,30 +37,11 @@
       cursor: pointer;
       text-decoration: none;
       transition: transform 0.2s, background-color 0.3s;
+      font-family: 'Nunito', sans-serif;
     }
-
     .start-button:hover {
       transform: scale(1.1);
       background-color: #4d0099;
-    }
-
-    .heart {
-      display: inline-block;
-      color: red;
-      font-size: 1.5rem;
-      animation: pulse 1.2s infinite;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.3); }
-      100% { transform: scale(1); }
-    }
-
-    @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      p { font-size: 1rem; }
-      .start-button { font-size: 1.2rem; padding: 15px 30px; }
     }
   </style>
 </head>
@@ -89,8 +54,6 @@
     and see what awaits you at the end. I hope you have a great time, I love you so much!
   </p>
   
-  <a href="page2.html" class="start-button">
-    START <span class="heart">❤️</span>
-  </a>
+  <a href="page2.html" class="start-button">START</a>
 </body>
 </html>
