--- a/page2.html
+++ b/page2.html
@@ -35,20 +35,13 @@
             margin-bottom: 20px;
             line-height: 1.6;
         }
-        .puzzle-container {
-            width: 90vw; /* Responsive width */
-            max-width: 800px; /* Max width for larger screens */
-            height: 60vh; /* Responsive height */
-            max-height: 600px;
+        .puzzle-image {
+            width: 90%; /* Responsive width */
+            max-width: 600px; /* Max width for larger screens */
+            height: auto;
             margin-bottom: 30px;
             border: 4px solid #2a004d;
             border-radius: 12px;
-            overflow: hidden; /* Ensures the iframe corners are rounded */
-        }
-        .puzzle-iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
         }
         .lyric-container {
             margin-top: 20px;
@@ -97,9 +90,7 @@
 
     <h1>GET READY FOR THE NEXT STEP!</h1>
 
-    <div class="puzzle-container">
-        <iframe class="puzzle-iframe" src="https://puzzel.org/en/jigsaw/embed?p=-OY7W7KzhALQ62zNrPlb"></iframe>
-    </div>
+    <img src="our-puzzle.jpg" alt="A jigsaw puzzle of a special moment" class="puzzle-image">
 
     <h2>Instructions</h2>
     <p>Solve the image above and fill in the blank below to progress to the next page.</p>
