--- a/page2.html
+++ b/page2.html
@@ -90,7 +90,7 @@
 
     <h1>GET READY FOR THE NEXT STEP!</h1>
 
-    <img src="our-puzzle.jpg" alt="A jigsaw puzzle of a special moment" class="puzzle-image">
+    <img src="our-puzzle.jpg.png" alt="A jigsaw puzzle of a special moment" class="puzzle-image">
 
     <h2>Instructions</h2>
     <p>Solve the image above and fill in the blank below to progress to the next page.</p>
