--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
         }
         h1 {
             font-family: 'Press Start 2P', cursive;
-            font-size: 2.5rem; /* Adjusted for mobile friendliness */
+            font-size: 2.5rem;
             margin-bottom: 30px;
         }
         h2 {
@@ -29,45 +29,51 @@
         }
         p {
             font-family: 'Nunito', sans-serif;
-            font-size: 1.4rem; /* Making the Nunito font bigger as requested */
+            font-size: 1.4rem;
             color: #4a2c6d;
             max-width: 700px;
             margin-bottom: 20px;
             line-height: 1.6;
         }
-        .puzzle-image {
-            width: 90%; /* Responsive width */
-            max-width: 600px; /* Max width for larger screens */
-            height: auto;
+        .puzzle-container {
+            width: 90vw;
+            max-width: 800px;
+            height: 60vh;
+            max-height: 600px;
             margin-bottom: 30px;
             border: 4px solid #2a004d;
             border-radius: 12px;
+            overflow: hidden;
+        }
+        .puzzle-iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
         .lyric-container {
             margin-top: 20px;
+            background-color: #ede7f6;
+            border: 2px solid #d1c4e9;
+            border-radius: 15px;
+            padding: 20px 30px;
+            max-width: 700px;
         }
         blockquote {
             font-family: 'Nunito', sans-serif;
             font-size: 1.8rem;
             font-style: italic;
             color: #3a0066;
-            margin: 0;
+            margin: 0 0 10px 0;
         }
-        .lyric-input {
-            display: block;
-            margin: 20px auto;
-            padding: 10px 15px;
-            font-size: 1.5rem;
-            border: 3px solid #4a2c6d;
-            border-radius: 8px;
-            text-align: center;
+        .lyric-answer {
             font-family: 'Nunito', sans-serif;
+            font-size: 1.8rem;
+            font-style: italic;
+            font-weight: bold;
             color: #3a0066;
-            width: 80%;
-            max-width: 500px;
         }
         .proceed-button {
-            display: none; /* Initially hidden */
+            display: inline-block; /* Now always visible */
             padding: 20px 40px;
             font-size: 1.5rem;
             background-color: #3a0066;
@@ -78,7 +84,7 @@
             text-decoration: none;
             transition: transform 0.2s, background-color 0.3s;
             font-family: 'Nunito', sans-serif;
-            margin-top: 20px;
+            margin-top: 30px;
         }
         .proceed-button:hover {
             transform: scale(1.1);
@@ -90,34 +96,21 @@
 
     <h1>GET READY FOR THE NEXT STEP!</h1>
 
-    <img src="our-puzzle.jpg.png" alt="A jigsaw puzzle of a special moment" class="puzzle-image">
+    <div class="puzzle-container">
+        <iframe class="puzzle-iframe" src="https://puzzel.org/en/jigsaw/embed?p=-OY7_ChTsEVXHUt2-Bkw"></iframe>
+    </div>
 
     <h2>Instructions</h2>
-    <p>Solve the image above and fill in the blank below to progress to the next page.</p>
+    <p>Have fun with the puzzle! The clue to the next page is revealed below.</p>
 
     <div class="lyric-container">
         <blockquote>
             "I thought that I was dreaming..."
         </blockquote>
-        <input type="text" id="lyricInput" class="lyric-input" placeholder="...when you said you loved me">
+        <p class="lyric-answer">...when you said you loved me</p>
     </div>
 
-    <a href="when-you-said-you-loved-me.html" class="proceed-button" id="proceedBtn">PROCEED</a>
-
-    <script>
-        // This script will show the "Proceed" button once the correct lyric is typed.
-        const lyricInput = document.getElementById('lyricInput');
-        const proceedBtn = document.getElementById('proceedBtn');
-
-        lyricInput.addEventListener('input', function() {
-            // Check if the typed answer is correct (ignoring case and extra spaces)
-            if (this.value.trim().toLowerCase() === 'when you said you loved me') {
-                proceedBtn.style.display = 'inline-block';
-            } else {
-                proceedBtn.style.display = 'none';
-            }
-        });
-    </script>
+    <a href="when-you-said-you-loved-me.html" class="proceed-button">PROCEED</a>
 
 </body>
 </html>
