--- a/page2.html
+++ b/page2.html
@@ -73,7 +73,7 @@
             color: #3a0066;
         }
         .proceed-button {
-            display: inline-block; /* Now always visible */
+            display: inline-block;
             padding: 20px 40px;
             font-size: 1.5rem;
             background-color: #3a0066;
@@ -97,7 +97,7 @@
     <h1>GET READY FOR THE NEXT STEP!</h1>
 
     <div class="puzzle-container">
-        <iframe class="puzzle-iframe" src="https://puzzel.org/en/jigsaw/embed?p=-OY7_ChTsEVXHUt2-Bkw"></iframe>
+        <iframe class="puzzle-iframe" src="https://www.jigsawplanet.com/?rc=play&pid=3330a363c5f9"></iframe>
     </div>
 
     <h2>Instructions</h2>
