--- a/page2.html
+++ b/page2.html
@@ -97,7 +97,7 @@
     <h1>GET READY FOR THE NEXT STEP!</h1>
 
     <div class="puzzle-container">
-        <iframe class="puzzle-iframe" src="https://www.jigsawplanet.com/?rc=play&pid=3330a363c5f9"></iframe>
+        <iframe class="puzzle-iframe" src="https://www.jigsawplanet.com/?rc=play&pid=3330a363c5f9&view=iframe" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <h2>Instructions</h2>
