--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,7 @@
             border: 2px solid #d1c4e9;
             border-radius: 15px;
             padding: 20px 30px;
+            width: 90%;
             max-width: 700px;
         }
         blockquote {
@@ -63,17 +64,23 @@
             font-size: 1.8rem;
             font-style: italic;
             color: #3a0066;
-            margin: 0 0 10px 0;
+            margin: 0;
         }
-        .lyric-answer {
+        .lyric-input {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 15px;
+            font-size: 1.5rem;
+            border: 3px solid #4a2c6d;
+            border-radius: 8px;
+            text-align: center;
             font-family: 'Nunito', sans-serif;
-            font-size: 1.8rem;
-            font-style: italic;
-            font-weight: bold;
             color: #3a0066;
+            width: 80%;
+            max-width: 500px;
         }
         .proceed-button {
-            display: inline-block;
+            display: none; /* The button is hidden by default */
             padding: 20px 40px;
             font-size: 1.5rem;
             background-color: #3a0066;
@@ -101,16 +108,23 @@
     </div>
 
     <h2>Instructions</h2>
-    <p>Have fun with the puzzle! The clue to the next page is revealed below.</p>
+    <p>Solve the puzzle, then complete the lyric below to unlock the way forward!</p>
 
     <div class="lyric-container">
         <blockquote>
             "I thought that I was dreaming..."
         </blockquote>
-        <p class="lyric-answer">...when you said you loved me</p>
+        <input type="text" id="lyricInput" class="lyric-input" placeholder="Type the next line here">
     </div>
 
-    <a href="when-you-said-you-loved-me.html" class="proceed-button">PROCEED</a>
+    <a href="when-you-said-you-loved-me.html" class="proceed-button" id="proceedBtn">PROCEED</a>
 
-</body>
-</html>
+    <script>
+        const lyricInput = document.getElementById('lyricInput');
+        const proceedBtn = document.getElementById('proceedBtn');
+
+        lyricInput.addEventListener('input', function() {
+            // Check if the typed answer is correct (ignoring case and extra spaces)
+            if (this.value.trim().toLowerCase() === 'when you said you loved me') {
+                proceedBtn.style.display = 'inline-block';
+            } else
